Fix layout issues

--- a/public/posts/style.css
+++ b/public/posts/style.css
@@ -105,6 +105,8 @@ h3 {
 
 h4 {
 	font-weight: 600;
+	margin: 25px 0 0 0;
+	padding-bottom: 3px;
 }
 
 p {
